// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Users given badges are disabled renders 1`] = `
<div
  class="admin-users"
>
  <div
    class="os-card relative rounded-[5px] break-words bg-white shadow-[0px_12px_26px_-4px_rgba(0,0,0,0.1)] p-6"
  >
    <h2
      class="title"
    >
      admin.users.name
    </h2>
     
    <form
      autocomplete="off"
      class="ds-form"
      novalidate="novalidate"
    >
      <div
        class="ds-flex ds-flex-gap-small"
      >
        <div
          style="flex: 0 0 90%; width: 90%;"
        >
          <div
            class="ds-form-item ds-input-size-base"
          >
            <label
              class="ds-input-label"
              style="display: none;"
            >
              
  

            </label>
            <div
              class="ds-input-wrap"
            >
              <div
                class="ds-input-icon"
              >
                <span
                  aria-label="icon"
                  class="ds-icon"
                >
                  <svg
                    class="ds-icon-svg"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 3c5.511 0 10 4.489 10 10s-4.489 10-10 10a9.923 9.923 0 01-6.313-2.25l-7.969 7.969-1.438-1.438 7.969-7.969a9.919 9.919 0 01-2.25-6.313c0-5.511 4.489-10 10-10zm0 2c-4.43 0-8 3.57-8 8s3.57 8 8 8 8-3.57 8-8-3.57-8-8-8z"
                    />
                  </svg>
                </span>
              </div>
              <input
                class="ds-input ds-input-has-icon"
                name="query"
                placeholder="admin.users.form.placeholder"
                tabindex="0"
                type="text"
              />
              <!---->
            </div>
            <transition-stub
              name="ds-input-error"
            >
              <div
                class="ds-input-error"
                style="display: none;"
              >
                
    
  
              </div>
            </transition-stub>
          </div>
        </div>
         
        <div
          style="flex: 0 0 30px; width: 30px;"
        >
          <button
            aria-label="actions.search"
            class="os-button inline-flex items-center justify-center [white-space-collapse:collapse] relative appearance-none font-semibold tracking-[0.05em] transition-[color,background-color] duration-[80ms] ease-[cubic-bezier(0.25,0.46,0.45,0.94)] cursor-pointer select-none border-[0.8px] border-solid focus:outline-1 disabled:pointer-events-none disabled:cursor-default focus:outline-dashed focus:outline-[var(--color-primary)] shadow-[inset_0_0_0_1px_rgba(0,0,0,0.05)] disabled:bg-[var(--color-disabled)] disabled:text-[var(--color-disabled-contrast)] disabled:border-[var(--color-disabled)] disabled:shadow-[inset_0_0_0_1px_transparent] h-[36px] min-w-[36px] text-[15px] leading-[normal] align-middle bg-[var(--color-primary)] text-[var(--color-primary-contrast)] border-[var(--color-primary)] hover:bg-[var(--color-primary-hover)] hover:border-[var(--color-primary-hover)] hover:text-[var(--color-primary-contrast)] active:bg-[var(--color-primary-active)] active:border-[var(--color-primary-active)] active:text-[var(--color-primary-contrast)] rounded-full p-0 w-[36px]"
            data-appearance="filled"
            data-variant="primary"
            type="submit"
          >
            <span
              class="inline-flex items-center"
            >
              <span
                class="os-button__icon inline-flex items-center shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
              >
                <span
                  aria-hidden="true"
                  class="os-icon inline-flex items-center align-bottom shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
                >
                  <svg
                    fill="currentColor"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 3c5.511 0 10 4.489 10 10s-4.489 10-10 10c-2.395 0-4.588-0.839-6.313-2.25l-7.969 7.969-1.438-1.438 7.969-7.969c-1.411-1.724-2.25-3.917-2.25-6.313 0-5.511 4.489-10 10-10zM19 5c-4.43 0-8 3.57-8 8s3.57 8 8 8 8-3.57 8-8-3.57-8-8-8z"
                    />
                  </svg>
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
   
  <div
    class="os-card relative rounded-[5px] break-words bg-white shadow-[0px_12px_26px_-4px_rgba(0,0,0,0.1)] p-6"
  >
    <div
      class="ds-table-wrap"
    >
      <table
        class="ds-table ds-table-condensed ds-table-bordered"
      >
        <thead>
          <tr>
            <th
              class="ds-table-head-col"
              scope="col"
            >
              
              admin.users.table.columns.number
            
            </th>
             
            <th
              class="ds-table-head-col"
              scope="col"
            >
              
              admin.users.table.columns.name
            
            </th>
             
            <th
              class="ds-table-head-col"
              scope="col"
            >
              
              admin.users.table.columns.email
            
            </th>
             
            <th
              class="ds-table-head-col"
              scope="col"
            >
              
              admin.users.table.columns.slug
            
            </th>
             
            <th
              class="ds-table-head-col"
              scope="col"
            >
              
              admin.users.table.columns.createdAt
            
            </th>
             
            <th
              aria-label="admin.users.table.columns.contributions"
              class="ds-table-head-col ds-table-head-col-right"
              scope="col"
            >
              
              🖉
            
            </th>
             
            <th
              aria-label="admin.users.table.columns.comments"
              class="ds-table-head-col ds-table-head-col-right"
              scope="col"
            >
              
              🗨
            
            </th>
             
            <th
              aria-label="admin.users.table.columns.shouted"
              class="ds-table-head-col ds-table-head-col-right"
              scope="col"
            >
              
              ❤
            
            </th>
             
            <th
              class="ds-table-head-col ds-table-head-col-right"
              scope="col"
            >
              
              admin.users.table.columns.role
            
            </th>
             
            <!---->
          </tr>
        </thead>
         
        <tbody>
          <tr>
            <td
              class="ds-table-col"
            >
              NaN.
            </td>
             
            <td
              class="ds-table-col"
            >
              <nuxt-link-stub
                to="[object Object]"
              >
                <b>
                  User
                </b>
              </nuxt-link-stub>
            </td>
             
            <td
              class="ds-table-col"
            >
              <a
                href="mailto:user@example.org"
              >
                <b>
                  user@example.org
                </b>
              </a>
            </td>
             
            <td
              class="ds-table-col"
            >
              <nuxt-link-stub
                to="[object Object]"
              >
                <b>
                  user
                </b>
              </nuxt-link-stub>
            </td>
             
            <td
              class="ds-table-col"
            >
              
              
            
            </td>
             
            <td
              class="ds-table-col ds-table-col-right"
            >
              
            </td>
             
            <td
              class="ds-table-col ds-table-col-right"
            >
              
            </td>
             
            <td
              class="ds-table-col ds-table-col-right"
            >
              
            </td>
             
            <td
              class="ds-table-col ds-table-col-right"
            >
              <!---->
            </td>
             
            <!---->
          </tr>
          <tr>
            <td
              class="ds-table-col"
            >
              NaN.
            </td>
             
            <td
              class="ds-table-col"
            >
              <nuxt-link-stub
                to="[object Object]"
              >
                <b>
                  User
                </b>
              </nuxt-link-stub>
            </td>
             
            <td
              class="ds-table-col"
            >
              <a
                href="mailto:user2@example.org"
              >
                <b>
                  user2@example.org
                </b>
              </a>
            </td>
             
            <td
              class="ds-table-col"
            >
              <nuxt-link-stub
                to="[object Object]"
              >
                <b>
                  user
                </b>
              </nuxt-link-stub>
            </td>
             
            <td
              class="ds-table-col"
            >
              
              
            
            </td>
             
            <td
              class="ds-table-col ds-table-col-right"
            >
              
            </td>
             
            <td
              class="ds-table-col ds-table-col-right"
            >
              
            </td>
             
            <td
              class="ds-table-col ds-table-col-right"
            >
              
            </td>
             
            <td
              class="ds-table-col ds-table-col-right"
            >
              <!---->
            </td>
             
            <!---->
          </tr>
        </tbody>
      </table>
    </div>
     
    <div
      class="pagination-buttons"
    >
      <button
        aria-label="pagination.previous"
        class="previous-button os-button inline-flex items-center justify-center [white-space-collapse:collapse] relative appearance-none font-semibold tracking-[0.05em] transition-[color,background-color] duration-[80ms] ease-[cubic-bezier(0.25,0.46,0.45,0.94)] cursor-pointer select-none border-[0.8px] border-solid focus:outline-1 disabled:pointer-events-none disabled:cursor-default focus:outline-dashed focus:outline-[var(--color-primary)] bg-transparent shadow-none disabled:border-[var(--color-disabled)] disabled:text-[var(--color-disabled)] h-[36px] min-w-[36px] text-[15px] leading-[normal] align-middle border-[var(--color-primary)] text-[var(--color-primary)] hover:bg-[var(--color-primary)] hover:text-[var(--color-primary-contrast)] active:bg-[var(--color-primary-active)] active:border-[var(--color-primary-active)] active:text-[var(--color-primary-contrast)] rounded-full p-0 w-[36px] previous-button"
        data-appearance="outline"
        data-test="previous-button"
        data-variant="primary"
        disabled="disabled"
        type="button"
      >
        <span
          class="inline-flex items-center"
        >
          <span
            class="os-button__icon inline-flex items-center shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
          >
            <span
              aria-hidden="true"
              class="os-icon inline-flex items-center align-bottom shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
            >
              <svg
                fill="currentColor"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.281 6.781l1.438 1.438-6.781 6.781h20.063v2h-20.063l6.781 6.781-1.438 1.438-8.5-8.5-0.688-0.719 0.688-0.719z"
                />
              </svg>
            </span>
          </span>
        </span>
      </button>
       
      <!---->
       
      <button
        aria-label="pagination.next"
        class="next-button os-button inline-flex items-center justify-center [white-space-collapse:collapse] relative appearance-none font-semibold tracking-[0.05em] transition-[color,background-color] duration-[80ms] ease-[cubic-bezier(0.25,0.46,0.45,0.94)] cursor-pointer select-none border-[0.8px] border-solid focus:outline-1 disabled:pointer-events-none disabled:cursor-default focus:outline-dashed focus:outline-[var(--color-primary)] bg-transparent shadow-none disabled:border-[var(--color-disabled)] disabled:text-[var(--color-disabled)] h-[36px] min-w-[36px] text-[15px] leading-[normal] align-middle border-[var(--color-primary)] text-[var(--color-primary)] hover:bg-[var(--color-primary)] hover:text-[var(--color-primary-contrast)] active:bg-[var(--color-primary-active)] active:border-[var(--color-primary-active)] active:text-[var(--color-primary-contrast)] rounded-full p-0 w-[36px] next-button"
        data-appearance="outline"
        data-test="next-button"
        data-variant="primary"
        disabled="disabled"
        type="button"
      >
        <span
          class="inline-flex items-center"
        >
          <span
            class="os-button__icon inline-flex items-center shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
          >
            <span
              aria-hidden="true"
              class="os-icon inline-flex items-center align-bottom shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
            >
              <svg
                fill="currentColor"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.719 6.781l8.5 8.5 0.688 0.719-0.688 0.719-8.5 8.5-1.438-1.438 6.781-6.781h-20.063v-2h20.063l-6.781-6.781z"
                />
              </svg>
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Users given badges are enabled renders 1`] = `
<div
  class="admin-users"
>
  <div
    class="os-card relative rounded-[5px] break-words bg-white shadow-[0px_12px_26px_-4px_rgba(0,0,0,0.1)] p-6"
  >
    <h2
      class="title"
    >
      admin.users.name
    </h2>
     
    <form
      autocomplete="off"
      class="ds-form"
      novalidate="novalidate"
    >
      <div
        class="ds-flex ds-flex-gap-small"
      >
        <div
          style="flex: 0 0 90%; width: 90%;"
        >
          <div
            class="ds-form-item ds-input-size-base"
          >
            <label
              class="ds-input-label"
              style="display: none;"
            >
              
  

            </label>
            <div
              class="ds-input-wrap"
            >
              <div
                class="ds-input-icon"
              >
                <span
                  aria-label="icon"
                  class="ds-icon"
                >
                  <svg
                    class="ds-icon-svg"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 3c5.511 0 10 4.489 10 10s-4.489 10-10 10a9.923 9.923 0 01-6.313-2.25l-7.969 7.969-1.438-1.438 7.969-7.969a9.919 9.919 0 01-2.25-6.313c0-5.511 4.489-10 10-10zm0 2c-4.43 0-8 3.57-8 8s3.57 8 8 8 8-3.57 8-8-3.57-8-8-8z"
                    />
                  </svg>
                </span>
              </div>
              <input
                class="ds-input ds-input-has-icon"
                name="query"
                placeholder="admin.users.form.placeholder"
                tabindex="0"
                type="text"
              />
              <!---->
            </div>
            <transition-stub
              name="ds-input-error"
            >
              <div
                class="ds-input-error"
                style="display: none;"
              >
                
    
  
              </div>
            </transition-stub>
          </div>
        </div>
         
        <div
          style="flex: 0 0 30px; width: 30px;"
        >
          <button
            aria-label="actions.search"
            class="os-button inline-flex items-center justify-center [white-space-collapse:collapse] relative appearance-none font-semibold tracking-[0.05em] transition-[color,background-color] duration-[80ms] ease-[cubic-bezier(0.25,0.46,0.45,0.94)] cursor-pointer select-none border-[0.8px] border-solid focus:outline-1 disabled:pointer-events-none disabled:cursor-default focus:outline-dashed focus:outline-[var(--color-primary)] shadow-[inset_0_0_0_1px_rgba(0,0,0,0.05)] disabled:bg-[var(--color-disabled)] disabled:text-[var(--color-disabled-contrast)] disabled:border-[var(--color-disabled)] disabled:shadow-[inset_0_0_0_1px_transparent] h-[36px] min-w-[36px] text-[15px] leading-[normal] align-middle bg-[var(--color-primary)] text-[var(--color-primary-contrast)] border-[var(--color-primary)] hover:bg-[var(--color-primary-hover)] hover:border-[var(--color-primary-hover)] hover:text-[var(--color-primary-contrast)] active:bg-[var(--color-primary-active)] active:border-[var(--color-primary-active)] active:text-[var(--color-primary-contrast)] rounded-full p-0 w-[36px]"
            data-appearance="filled"
            data-variant="primary"
            type="submit"
          >
            <span
              class="inline-flex items-center"
            >
              <span
                class="os-button__icon inline-flex items-center shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
              >
                <span
                  aria-hidden="true"
                  class="os-icon inline-flex items-center align-bottom shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
                >
                  <svg
                    fill="currentColor"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 3c5.511 0 10 4.489 10 10s-4.489 10-10 10c-2.395 0-4.588-0.839-6.313-2.25l-7.969 7.969-1.438-1.438 7.969-7.969c-1.411-1.724-2.25-3.917-2.25-6.313 0-5.511 4.489-10 10-10zM19 5c-4.43 0-8 3.57-8 8s3.57 8 8 8 8-3.57 8-8-3.57-8-8-8z"
                    />
                  </svg>
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
   
  <div
    class="os-card relative rounded-[5px] break-words bg-white shadow-[0px_12px_26px_-4px_rgba(0,0,0,0.1)] p-6"
  >
    <div
      class="ds-table-wrap"
    >
      <table
        class="ds-table ds-table-condensed ds-table-bordered"
      >
        <thead>
          <tr>
            <th
              class="ds-table-head-col"
              scope="col"
            >
              
              admin.users.table.columns.number
            
            </th>
             
            <th
              class="ds-table-head-col"
              scope="col"
            >
              
              admin.users.table.columns.name
            
            </th>
             
            <th
              class="ds-table-head-col"
              scope="col"
            >
              
              admin.users.table.columns.email
            
            </th>
             
            <th
              class="ds-table-head-col"
              scope="col"
            >
              
              admin.users.table.columns.slug
            
            </th>
             
            <th
              class="ds-table-head-col"
              scope="col"
            >
              
              admin.users.table.columns.createdAt
            
            </th>
             
            <th
              aria-label="admin.users.table.columns.contributions"
              class="ds-table-head-col ds-table-head-col-right"
              scope="col"
            >
              
              🖉
            
            </th>
             
            <th
              aria-label="admin.users.table.columns.comments"
              class="ds-table-head-col ds-table-head-col-right"
              scope="col"
            >
              
              🗨
            
            </th>
             
            <th
              aria-label="admin.users.table.columns.shouted"
              class="ds-table-head-col ds-table-head-col-right"
              scope="col"
            >
              
              ❤
            
            </th>
             
            <th
              class="ds-table-head-col ds-table-head-col-right"
              scope="col"
            >
              
              admin.users.table.columns.role
            
            </th>
             
            <th
              class="ds-table-head-col ds-table-head-col-right"
              scope="col"
            >
              
              admin.users.table.columns.badges
            
            </th>
          </tr>
        </thead>
         
        <tbody>
          <tr>
            <td
              class="ds-table-col"
            >
              NaN.
            </td>
             
            <td
              class="ds-table-col"
            >
              <nuxt-link-stub
                to="[object Object]"
              >
                <b>
                  User
                </b>
              </nuxt-link-stub>
            </td>
             
            <td
              class="ds-table-col"
            >
              <a
                href="mailto:user@example.org"
              >
                <b>
                  user@example.org
                </b>
              </a>
            </td>
             
            <td
              class="ds-table-col"
            >
              <nuxt-link-stub
                to="[object Object]"
              >
                <b>
                  user
                </b>
              </nuxt-link-stub>
            </td>
             
            <td
              class="ds-table-col"
            >
              
              
            
            </td>
             
            <td
              class="ds-table-col ds-table-col-right"
            >
              
            </td>
             
            <td
              class="ds-table-col ds-table-col-right"
            >
              
            </td>
             
            <td
              class="ds-table-col ds-table-col-right"
            >
              
            </td>
             
            <td
              class="ds-table-col ds-table-col-right"
            >
              <!---->
            </td>
             
            <td
              class="ds-table-col ds-table-col-right"
            >
              <nuxt-link-stub
                aria-label="actions.edit"
                class="os-button inline-flex items-center justify-center [white-space-collapse:collapse] relative appearance-none font-semibold tracking-[0.05em] transition-[color,background-color] duration-[80ms] ease-[cubic-bezier(0.25,0.46,0.45,0.94)] cursor-pointer select-none border-[0.8px] border-solid focus:outline-1 disabled:pointer-events-none disabled:cursor-default focus:outline-dashed focus:outline-[var(--color-primary)] shadow-[inset_0_0_0_1px_rgba(0,0,0,0.05)] disabled:bg-[var(--color-disabled)] disabled:text-[var(--color-disabled-contrast)] disabled:border-[var(--color-disabled)] disabled:shadow-[inset_0_0_0_1px_transparent] h-[36px] min-w-[36px] text-[15px] leading-[normal] align-middle bg-[var(--color-primary)] text-[var(--color-primary-contrast)] border-[var(--color-primary)] hover:bg-[var(--color-primary-hover)] hover:border-[var(--color-primary-hover)] hover:text-[var(--color-primary-contrast)] active:bg-[var(--color-primary-active)] active:border-[var(--color-primary-active)] active:text-[var(--color-primary-contrast)] rounded-full p-0 w-[36px]"
                data-appearance="filled"
                data-variant="primary"
                to="[object Object]"
              >
                <span
                  class="inline-flex items-center"
                >
                  <span
                    class="os-button__icon inline-flex items-center shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
                  >
                    <span
                      aria-hidden="true"
                      class="os-icon inline-flex items-center align-bottom shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
                    >
                      <svg
                        fill="currentColor"
                        viewBox="0 0 32 32"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M24.688 4.031c0.837 0 1.679 0.335 2.313 0.969 1.267 1.267 1.267 3.327 0 4.594l-0.031 0.063-0.063 0.063 0.594 0.594-16.5 16.5-0.313 0.063-5.5 1.094-1.469 0.313 0.313-1.469 1.094-5.5 0.063-0.313 16.5-16.5 0.625 0.594 0.094-0.094c0.633-0.633 1.444-0.969 2.281-0.969zM24.688 6c-0.312 0-0.608 0.14-0.875 0.406l-0.094 0.094 1.781 1.781 0.094-0.094c0.533-0.533 0.533-1.248 0-1.781-0.267-0.267-0.594-0.406-0.906-0.406zM21.719 7.313l-1.469 1.438 3 3 1.438-1.469zM18.875 10.188l-10.469 10.438 1.813 0.406 0.625 0.125 0.125 0.625 0.406 1.813 10.438-10.469zM6.969 22.344l-0.406 2.031 1.063 1.063 2.031-0.406-0.5-2.188z"
                        />
                      </svg>
                    </span>
                  </span>
                </span>
              </nuxt-link-stub>
            </td>
          </tr>
          <tr>
            <td
              class="ds-table-col"
            >
              NaN.
            </td>
             
            <td
              class="ds-table-col"
            >
              <nuxt-link-stub
                to="[object Object]"
              >
                <b>
                  User
                </b>
              </nuxt-link-stub>
            </td>
             
            <td
              class="ds-table-col"
            >
              <a
                href="mailto:user2@example.org"
              >
                <b>
                  user2@example.org
                </b>
              </a>
            </td>
             
            <td
              class="ds-table-col"
            >
              <nuxt-link-stub
                to="[object Object]"
              >
                <b>
                  user
                </b>
              </nuxt-link-stub>
            </td>
             
            <td
              class="ds-table-col"
            >
              
              
            
            </td>
             
            <td
              class="ds-table-col ds-table-col-right"
            >
              
            </td>
             
            <td
              class="ds-table-col ds-table-col-right"
            >
              
            </td>
             
            <td
              class="ds-table-col ds-table-col-right"
            >
              
            </td>
             
            <td
              class="ds-table-col ds-table-col-right"
            >
              <!---->
            </td>
             
            <td
              class="ds-table-col ds-table-col-right"
            >
              <nuxt-link-stub
                aria-label="actions.edit"
                class="os-button inline-flex items-center justify-center [white-space-collapse:collapse] relative appearance-none font-semibold tracking-[0.05em] transition-[color,background-color] duration-[80ms] ease-[cubic-bezier(0.25,0.46,0.45,0.94)] cursor-pointer select-none border-[0.8px] border-solid focus:outline-1 disabled:pointer-events-none disabled:cursor-default focus:outline-dashed focus:outline-[var(--color-primary)] shadow-[inset_0_0_0_1px_rgba(0,0,0,0.05)] disabled:bg-[var(--color-disabled)] disabled:text-[var(--color-disabled-contrast)] disabled:border-[var(--color-disabled)] disabled:shadow-[inset_0_0_0_1px_transparent] h-[36px] min-w-[36px] text-[15px] leading-[normal] align-middle bg-[var(--color-primary)] text-[var(--color-primary-contrast)] border-[var(--color-primary)] hover:bg-[var(--color-primary-hover)] hover:border-[var(--color-primary-hover)] hover:text-[var(--color-primary-contrast)] active:bg-[var(--color-primary-active)] active:border-[var(--color-primary-active)] active:text-[var(--color-primary-contrast)] rounded-full p-0 w-[36px]"
                data-appearance="filled"
                data-variant="primary"
                to="[object Object]"
              >
                <span
                  class="inline-flex items-center"
                >
                  <span
                    class="os-button__icon inline-flex items-center shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
                  >
                    <span
                      aria-hidden="true"
                      class="os-icon inline-flex items-center align-bottom shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
                    >
                      <svg
                        fill="currentColor"
                        viewBox="0 0 32 32"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M24.688 4.031c0.837 0 1.679 0.335 2.313 0.969 1.267 1.267 1.267 3.327 0 4.594l-0.031 0.063-0.063 0.063 0.594 0.594-16.5 16.5-0.313 0.063-5.5 1.094-1.469 0.313 0.313-1.469 1.094-5.5 0.063-0.313 16.5-16.5 0.625 0.594 0.094-0.094c0.633-0.633 1.444-0.969 2.281-0.969zM24.688 6c-0.312 0-0.608 0.14-0.875 0.406l-0.094 0.094 1.781 1.781 0.094-0.094c0.533-0.533 0.533-1.248 0-1.781-0.267-0.267-0.594-0.406-0.906-0.406zM21.719 7.313l-1.469 1.438 3 3 1.438-1.469zM18.875 10.188l-10.469 10.438 1.813 0.406 0.625 0.125 0.125 0.625 0.406 1.813 10.438-10.469zM6.969 22.344l-0.406 2.031 1.063 1.063 2.031-0.406-0.5-2.188z"
                        />
                      </svg>
                    </span>
                  </span>
                </span>
              </nuxt-link-stub>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
     
    <div
      class="pagination-buttons"
    >
      <button
        aria-label="pagination.previous"
        class="previous-button os-button inline-flex items-center justify-center [white-space-collapse:collapse] relative appearance-none font-semibold tracking-[0.05em] transition-[color,background-color] duration-[80ms] ease-[cubic-bezier(0.25,0.46,0.45,0.94)] cursor-pointer select-none border-[0.8px] border-solid focus:outline-1 disabled:pointer-events-none disabled:cursor-default focus:outline-dashed focus:outline-[var(--color-primary)] bg-transparent shadow-none disabled:border-[var(--color-disabled)] disabled:text-[var(--color-disabled)] h-[36px] min-w-[36px] text-[15px] leading-[normal] align-middle border-[var(--color-primary)] text-[var(--color-primary)] hover:bg-[var(--color-primary)] hover:text-[var(--color-primary-contrast)] active:bg-[var(--color-primary-active)] active:border-[var(--color-primary-active)] active:text-[var(--color-primary-contrast)] rounded-full p-0 w-[36px] previous-button"
        data-appearance="outline"
        data-test="previous-button"
        data-variant="primary"
        disabled="disabled"
        type="button"
      >
        <span
          class="inline-flex items-center"
        >
          <span
            class="os-button__icon inline-flex items-center shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
          >
            <span
              aria-hidden="true"
              class="os-icon inline-flex items-center align-bottom shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
            >
              <svg
                fill="currentColor"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.281 6.781l1.438 1.438-6.781 6.781h20.063v2h-20.063l6.781 6.781-1.438 1.438-8.5-8.5-0.688-0.719 0.688-0.719z"
                />
              </svg>
            </span>
          </span>
        </span>
      </button>
       
      <!---->
       
      <button
        aria-label="pagination.next"
        class="next-button os-button inline-flex items-center justify-center [white-space-collapse:collapse] relative appearance-none font-semibold tracking-[0.05em] transition-[color,background-color] duration-[80ms] ease-[cubic-bezier(0.25,0.46,0.45,0.94)] cursor-pointer select-none border-[0.8px] border-solid focus:outline-1 disabled:pointer-events-none disabled:cursor-default focus:outline-dashed focus:outline-[var(--color-primary)] bg-transparent shadow-none disabled:border-[var(--color-disabled)] disabled:text-[var(--color-disabled)] h-[36px] min-w-[36px] text-[15px] leading-[normal] align-middle border-[var(--color-primary)] text-[var(--color-primary)] hover:bg-[var(--color-primary)] hover:text-[var(--color-primary-contrast)] active:bg-[var(--color-primary-active)] active:border-[var(--color-primary-active)] active:text-[var(--color-primary-contrast)] rounded-full p-0 w-[36px] next-button"
        data-appearance="outline"
        data-test="next-button"
        data-variant="primary"
        disabled="disabled"
        type="button"
      >
        <span
          class="inline-flex items-center"
        >
          <span
            class="os-button__icon inline-flex items-center shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
          >
            <span
              aria-hidden="true"
              class="os-icon inline-flex items-center align-bottom shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
            >
              <svg
                fill="currentColor"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.719 6.781l8.5 8.5 0.688 0.719-0.688 0.719-8.5 8.5-1.438-1.438 6.781-6.781h-20.063v-2h20.063l-6.781-6.781z"
                />
              </svg>
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;
